Fix input appearance on mobile Safari

--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,7 @@ input, textarea, select {
     margin: 10px 0 20px 0;
     max-width: 500px;
     padding: 10px 14px;
+    -webkit-appearance: none;
     box-shadow: rgba(50, 50, 93, 0.14902) 0px 1px 3px, rgba(0, 0, 0, 0.0196078) 0px 1px 0px;
     border-radius: 4px;
     background: white;
